change value of z-index 100 instead of 1000 to fixe overlap dropdown issue in product bundle section|https://ten24.teamwork.com/#/tasks/30522763

--- a/admin/client/css/main.css
+++ b/admin/client/css/main.css
@@ -4195,7 +4195,7 @@ table .s-table-header .table-section a.s-hint {
   margin-bottom: 15px;
 }
 .s-bundle-group-items .input-group .input-group-btn {
-  z-index: 1000;
+  z-index: 100;
   vertical-align: bottom;
 }
 .s-bundle-group-items .dropdown-menu {
